Apply new registration flow changes
